--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ target/
 /nbdist/
 /.nb-gradle/
 build/
+out/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
@@ -34,4 +35,3 @@ build/
 .idea/
 
 .DS_Store
-pom.xml
